@@ -2,9 +2,9 @@
 
 *** Notes specific to am-utils version 6.1b2-pre
 
-- new mount flag "sftlookup", which determines how amd will respond to
+- new mount flag "softlookup", which determines how amd will respond to
   lookups of NFS shares already mounted (return a valid symlink or return
-  EIO). The default, if "sftlookup" is not specified, depends on whether the
+  EIO). The default, if "softlookup" is not specified, depends on whether the
   mount is "soft" or "hard".
 
 - return EIO instead of ENOENT if amd thinks the server is down; this allows
